fix: 修复Java 17兼容性和platformTenantId方法引用
- Thread.ofVirtual() 改为 new Thread() (Java 21+ API, 项目用Java 17)
- platformTenantId() 改为 systemConfigService.platformTenantId()
- 通知邮箱配置统一使用平台级tenantId(0)存储